GET - /investment/available
