# src/routes/investment.routes.js
@@ -2,9 +2,15 @@ const prefix = "/investment";
 import express from "express";
 const router = express.Router();
 import verify from "../middleware/verifiy.middleware";
-import { updateInvestmentSchema, createInvestmentSchema, findAllInvestmentSchema } from "../validations/investment";
-import { findOne, find, create, update, del } from "../controllers/investment.controller";
+import { updateInvestmentSchema, createInvestmentSchema, findAllInvestmentSchema, findAvailableInvestmentSchema } from "../validations/investment";
+import { findOne, find, create, update, del, findAvailable } from "../controllers/investment.controller";
 import cachedMiddleware from "../middleware/cached.middleware";
+
+/**
+ * GET - /investment/available
+ * */    
+router.route("/available")
+    .get(verify(findAvailableInvestmentSchema), findAvailable);
 
 /**
  * GET - /investment/:id
