# src/validations/investment.js
@@ -1,4 +1,5 @@
 import joi from "@hapi/joi";
+import categoryType from "../enum/categoryType";
 
 export const findAllInvestmentSchema = joi.object({
     query: joi.object({
@@ -16,6 +17,13 @@ export const findAllInvestmentSchema = joi.object({
         sortBy: joi.string(),
         orderBy: joi.string().valid("asc", "desc"),
         limit: joi.number().integer().positive().min(1),
+    }),
+});
+
+export const findAvailableInvestmentSchema = joi.object({
+    query: joi.object({
+        search: joi.string().required(),
+        category: joi.string().valid(categoryType.ACAO, categoryType.CRIPTOMOEDA).required(),
     }),
 });
 
